2011-03-29  Peter Bloomfield

	* src/main-window.c: implement alt-n to switch to mailbox at
	n-th tab.

2011-03-21  Pawel Salek

	* src/balsa-index.c: revert last change, it was wrong.
	* Makefile.am: merge patch from bug 645444.
	* configure.in: ditto.
	* balsa.desktop.in: ditto.
	* po/POTFILES.{skip,in}: add balsa-mailto-handler.desktop file.
	* src/Makefile.am: fix dist target when configured without gnome
	or unique.

2011-01-15  Pawel Salek

	* autogen.sh: port fixes from bootstrap.sh (inspired by pancake).
	* configure.in: support libgtkhtml-3.15 lib version.

	* libbalsa/imap-server.c: libbalsa_imap_server_get_handle() check
	if the parameter passed is non-null (credit to pancake).
	* libbalsa/imap/imap-handle.c: zeroize released pointers (pancake).
	* libinit_balsa/assistant_page_user.c: fix widget packing (pancake).
	* src/balsa-index.c: return FALSE on failure (pancake).

2010-12-09  Peter Bloomfield

	* balsa.1.in: do not use macro URL; fixes gnome bz #636801.

2010-12-09  Pawel Salek

	* configure.in: make detection more automatic; fix gnome bz #636805.

2010-12-05  Peter Bloomfield

	* src/toolbar-factory.c (tm_populate): do not make 2-line
	toolbar button text if we are using the desktop default and it
	is GTK_TOOLBAR_BOTH_HORIZ; fixes a strange vertical alignment
	issue when using the default and it is GTK_TOOLBAR_BOTH_HORIZ.

2010-11-19  Pawel Salek

	* Configure.in: compile against libnotify-0.4.x as well. 

2010-11-19  Pawel Salek

	* src/main-window.c:
	* libbalsa/information.c: compile against libnotify-0.7.0
	* configure.in, NEWS: release 2.4.9

2010-11-16  Peter Bloomfield

	* libbalsa/mailbox_imap.c (multi_append_cb): cast quotient, not
	numerator.

2010-11-16  Peter Bloomfield

	* libbalsa/mailbox_imap.c (multi_append_cb): do not break
	gettext with concatenated string.

2010-11-12  Peter Bloomfield

	* src/balsa-message.c (bm_next_part_info): look for next part
	above current part, if necessary; fixes